SERVER-66972 Database critical section does not serialize with ongoing refreshes