src/mongo/db/s/shard_filtering_metadata_refresh.h
@@ -95,13 +95,9 @@ ChunkVersion forceShardFilteringMetadataRefresh(OperationContext* opCtx,
  * Invalidates the cached database version, schedules a refresh of the database info, waits for the
  * refresh to complete, and updates the cached database version.
  */
-Status onDbVersionMismatchNoExcept(
-    OperationContext* opCtx,
-    const StringData dbName,
-    const DatabaseVersion& clientDbVersion,
-    const boost::optional<DatabaseVersion>& serverDbVersion) noexcept;
-
-void forceDatabaseRefresh(OperationContext* opCtx, const StringData dbName);
+Status onDbVersionMismatchNoExcept(OperationContext* opCtx,
+                                   const StringData dbName,
+                                   boost::optional<DatabaseVersion> clientDbVersion) noexcept;
 
 /**
  * RAII-style class that enters the migration critical section and refresh the filtering
