src/mongo/db/service_entry_point_mongod.cpp
@@ -232,9 +232,7 @@ public:
 
     bool refreshDatabase(OperationContext* opCtx, const StaleDbRoutingVersion& se) const
         noexcept override {
-        return onDbVersionMismatchNoExcept(
-                   opCtx, se.getDb(), se.getVersionReceived(), se.getVersionWanted())
-            .isOK();
+        return onDbVersionMismatchNoExcept(opCtx, se.getDb(), se.getVersionReceived()).isOK();
     }
 
     bool refreshCollection(OperationContext* opCtx, const StaleConfigInfo& se) const
